...
        <item>Bike tower</item>
        <item>Biceps machine</item>
        <item>Walking simulator</item>
        <item>High bar</item>
        <item>Rowing machine</item>
    </string-array>
    <string name="new_gym_dialog_message">Register a new gym</string>
    <string name="new_gym_dialog_save">Save</string>
    <string name="new_gym_dialog_cancel">Cancel</string>
    <string name="new_gym_dialog_hint_address">Address</string>
    <string name="new_gym_dialog_pcd_able_text">Suitable for people with disabilities</string>
    <string name="new_gym_not_logged">Please login first</string>
    <string name="new_gym_fail_address">Fill the approximated address</string>
...

    <string name="login_fail_email">Enter a valid email address</string>
    <string name="login_fail_password">The password must be between 6 and 14 characters length</string>
    <string name="login_fail">Login failed</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_register">Register</string>

    <string name="reset_password_forgot">Forgot the password?</string>
    <string name="reset_password_hint_email">Email</string>
    <string name="reset_password_reset">Password reset</string>
...
