<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/form_gym_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/new_gym_dialog_hint_address"
        android:inputType="textPostalAddress" />

    <GridView
        android:id="@+id/form_gym_equipments_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:choiceMode="multipleChoice"
        android:clickable="true"
        android:focusable="true"
        android:numColumns="2"
        app:layout_constraintTop_toBottomOf="@id/form_gym_address" />

    <CheckBox
        android:id="@+id/form_gym_pcd_able"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/new_gym_dialog_pcd_able_text"
        app:layout_constraintTop_toBottomOf="@id/form_gym_equipments_grid" />
</android.support.constraint.ConstraintLayout>
